--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "buster": "~0.6",
     "gent": "~0.4",
     "ws": "~0.4",
-    "express": "2.x"  
+    "express": "2.x",  
+    "mathsync": "0.2.0",
+    "most":"0.4.0",
+    "buffer":"2.1.3"
   },
   "main": "./cola",
   "directories": {
